<resources>
    <string name="app_name">Login App</string>
    <string name="submitText">%1$s</string>
    <string name="this_link">Create One</string>
    <string name="welcome">Welcome To Dashboard</string>
    <string name="logout">LOGOUT</string>
    <string name="email_link">Email Link Login</string>
    <string name="email">Email</string>
    <string name="invalid">Invalid Email</string>
    <string name="send">Send Link</string>
    <string name="message">We have sent an Email containing a button on your registered Email Id. Please click on the button to login.</string>
    <string name="login">Login Here</string>
    <string name="password">Password</string>
    <string name="log">Login</string>
    <string name="no_acct">No account:</string>
    <string name="create">Create One</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In using Link</string>
    <string name="sign_up">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="create_pass">Create Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="sign_up_proceed">Sign Up and Proceed</string>
    <string name="otp">OTP Verification</string>
    <string name="sent_msg">We have sent a verification code on your registered mobile no. to verify you.Standard rates may apply.</string>
    <string name="resend">RESEND OTP</string>
    <string name="verify_proceed">Verify and Proceed</string>
</resources>