<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#070707"
                android:textSize="48sp" />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="40sp"
                android:text="@string/email"
                android:textColor="#070707"
                android:textSize="16sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="10sp">
                <EditText
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="#F4584D"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textColor="#F80E0E" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/password"
                android:textColor="#070707"
                android:textSize="16sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="10sp">
                <EditText
                    android:id="@+id/editTextTextPassword3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#F4584D"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textColor="#F80E0E" />
            <Button
                android:id="@+id/button5"
                android:layout_width="365dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:gravity="center"
                android:text="@string/log"
                android:textAllCaps="false"
                android:textSize="27sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginRight="10sp"
                    android:text="@string/no_acct"
                    android:textColor="#070707"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0sp"
                    android:layout_marginTop="15sp"
                    android:baselineAligned="false"
                    android:text="@string/create"
                    android:textColor="#009688"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="#070707"
                android:textSize="16sp" />
            <Button
                android:id="@+id/button6"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:height="76dp"
                android:backgroundTint="#009688"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="27sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>